UI Works, Main page reworked

--- a/src/main/java/com/gacha/silo/BuatSuratJalan.form
+++ b/src/main/java/com/gacha/silo/BuatSuratJalan.form
@@ -17,7 +17,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="25" max="32767" attributes="0"/>
+              <EmptySpace pref="285" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jButton1" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
@@ -31,18 +31,16 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jTextField6" alignment="0" min="-2" pref="219" max="-2" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                              <Component id="jTextField4" min="-2" pref="219" max="-2" attributes="0"/>
-                              <Component id="jTextField5" alignment="1" min="-2" pref="219" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="jTextField3" alignment="1" min="-2" pref="219" max="-2" attributes="0"/>
-                          <Component id="jTextField1" alignment="1" min="-2" pref="219" max="-2" attributes="0"/>
-                          <Component id="jTextField2" alignment="1" min="-2" pref="219" max="-2" attributes="0"/>
+                          <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextField3" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextField4" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextField5" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextField6" alignment="0" min="-2" pref="332" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="242" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
