--- a/src/main/java/com/gacha/silo/BuatSuratJalanForm.form
+++ b/src/main/java/com/gacha/silo/BuatSuratJalanForm.form
@@ -19,24 +19,24 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="285" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jButton1" max="32767" attributes="0"/>
+                  <Component id="CreateSuratJalanButton" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="OrderDateLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="CustomerEmailLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="DeliveryNotesNumberLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ItemsLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="CustomerNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="InvoiceNumberLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField3" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField4" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField5" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField6" alignment="0" min="-2" pref="332" max="-2" attributes="0"/>
+                          <Component id="InvoiceNumberText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="DeliveryNotesNumberText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="CustomerNameText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="CustomerEmailText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="OrderDateText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="ItemsText" alignment="0" min="-2" pref="332" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -49,86 +49,86 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField1" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="InvoiceNumberLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="InvoiceNumberText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel2" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField2" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="DeliveryNotesNumberLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="DeliveryNotesNumberText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel3" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField3" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="CustomerNameLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="CustomerNameText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel4" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField4" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="CustomerEmailLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="CustomerEmailText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel5" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField5" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="OrderDateLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="OrderDateText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel6" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField6" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="ItemsLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="ItemsText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="42" max="-2" attributes="0"/>
+              <Component id="CreateSuratJalanButton" min="-2" pref="42" max="-2" attributes="0"/>
               <EmptySpace pref="27" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="InvoiceNumberText">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="InvoiceNumberLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Invoice Number"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="DeliveryNotesNumberText">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="DeliveryNotesNumberLabel">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Delivery Notes Number"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField3">
+    <Component class="javax.swing.JTextField" name="CustomerNameText">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel3">
+    <Component class="javax.swing.JLabel" name="CustomerNameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Customer Name"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField4">
+    <Component class="javax.swing.JTextField" name="CustomerEmailText">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="CustomerEmailLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Customer Email"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField5">
+    <Component class="javax.swing.JTextField" name="OrderDateText">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel5">
+    <Component class="javax.swing.JLabel" name="OrderDateLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Order Date"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField6">
+    <Component class="javax.swing.JTextField" name="ItemsText">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel6">
+    <Component class="javax.swing.JLabel" name="ItemsLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Items"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="CreateSuratJalanButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Create"/>
       </Properties>
