--- a/src/main/java/com/gacha/silo/BuatSuratJalanForm.form
+++ b/src/main/java/com/gacha/silo/BuatSuratJalanForm.form
@@ -132,6 +132,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Create"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CreateSuratJalanButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
