--- a/src/main/java/com/gacha/silo/InvoiceBaru.form
+++ b/src/main/java/com/gacha/silo/InvoiceBaru.form
@@ -16,13 +16,99 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="1000" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace pref="272" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="DeliveryDateLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="OrderDateLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="SupplierNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="PoNumberLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="PoNumberText" alignment="0" pref="332" max="32767" attributes="0"/>
+                          <Component id="SupplierNameText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="OrderDateText" alignment="0" max="32767" attributes="0"/>
+                          <Component id="DeliveryDateText" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="242" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="SubmitInvoiceButton" min="-2" pref="476" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="252" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="343" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="PoNumberLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="PoNumberText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="SupplierNameLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="SupplierNameText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="OrderDateLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="OrderDateText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="DeliveryDateLabel" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="DeliveryDateText" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="SubmitInvoiceButton" min="-2" pref="42" max="-2" attributes="0"/>
+              <EmptySpace pref="114" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JButton" name="SubmitInvoiceButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Submit"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SubmitInvoiceButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="PoNumberText">
+    </Component>
+    <Component class="javax.swing.JLabel" name="PoNumberLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PO Number"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="SupplierNameText">
+    </Component>
+    <Component class="javax.swing.JLabel" name="SupplierNameLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Supplier Name"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="OrderDateText">
+    </Component>
+    <Component class="javax.swing.JLabel" name="OrderDateLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Order Date"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="DeliveryDateText">
+    </Component>
+    <Component class="javax.swing.JLabel" name="DeliveryDateLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Delivery Date"/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
